--- a/KakaoTalk/app/src/main/res/values/strings.xml
+++ b/KakaoTalk/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="more_toast_msg">더 많은 기능을 사용해보세요</string>
     <string name="profile_toast_msg">상대방의 프로필을 구경합니다</string>
     <string name="content_toast_msg">메세지를 삭제하거나 다양한 기능을 제공합니다</string>
+    <string name="send_toast_msg">메세지를 전송합니다</string>
 </resources>
